--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,121 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite1</th></tr>
-<tr><td><a href="#t0">Regression</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Regression</a></td><td class="num">0</td><td class="num attn">6</td><td class="num">0</td><td class="num">0</td><td class="num">49</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Regression &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.ice_hrm_automation.TestingExamples.NewTest</td><td><a href="#m0">addition</a></td><td rowspan="1">1680700551605</td><td rowspan="1">8</td></tr><tr class="passedeven"><td><a href="#m1">division</a></td><td rowspan="1">1680700551615</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m2">multiplication</a></td><td rowspan="1">1680700551619</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">substraction</a></td><td rowspan="1">1680700551623</td><td rowspan="1">1</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Regression &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">Automationframework.iceHrm.icelogintest</td><td><a href="#m0">start</a></td><td rowspan="1">1681124778205</td><td rowspan="1">9</td></tr><tr><th colspan="4">Regression &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="6">Automationframework.iceHrm.icelogintest</td><td><a href="#m1">verifyLogin</a></td><td rowspan="6">1681124778227</td><td rowspan="6">0</td></tr><tr class="skippedeven"><td><a href="#m2">verifyLogin</a></td></tr><tr class="skippedeven"><td><a href="#m3">verifyLogin</a></td></tr><tr class="skippedeven"><td><a href="#m4">verifyLogin</a></td></tr><tr class="skippedeven"><td><a href="#m5">verifyLogin</a></td></tr><tr class="skippedeven"><td><a href="#m6">verifyLogin</a></td></tr></tbody>
 </table>
-<h2>Regression</h2><h3 id="m0">com.ice_hrm_automation.TestingExamples.NewTest#addition</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.ice_hrm_automation.TestingExamples.NewTest#division</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.ice_hrm_automation.TestingExamples.NewTest#multiplication</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.ice_hrm_automation.TestingExamples.NewTest#substraction</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Regression</h2><h3 id="m0">Automationframework.iceHrm.icelogintest#start</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.RuntimeException: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:21)
+	at Automationframework.iceHrm.icelogintest.start(icelogintest.java:20)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+Caused by: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at java.base/java.io.FileInputStream.open0(Native Method)
+	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:157)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:111)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:17)
+	... 22 more
+... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Automationframework.iceHrm.icelogintest#verifyLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>admin123</td><td>admin</td><td>Login failed</td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.RuntimeException: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:21)
+	at Automationframework.iceHrm.icelogintest.start(icelogintest.java:20)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+Caused by: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at java.base/java.io.FileInputStream.open0(Native Method)
+	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:157)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:111)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:17)
+	... 22 more
+... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Automationframework.iceHrm.icelogintest#verifyLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td></td><td>2zuzfakn</td><td></td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.RuntimeException: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:21)
+	at Automationframework.iceHrm.icelogintest.start(icelogintest.java:20)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+Caused by: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at java.base/java.io.FileInputStream.open0(Native Method)
+	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:157)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:111)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:17)
+	... 22 more
+... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Automationframework.iceHrm.icelogintest#verifyLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td></td><td></td><td></td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.RuntimeException: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:21)
+	at Automationframework.iceHrm.icelogintest.start(icelogintest.java:20)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+Caused by: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at java.base/java.io.FileInputStream.open0(Native Method)
+	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:157)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:111)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:17)
+	... 22 more
+... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Automationframework.iceHrm.icelogintest#verifyLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>admin</td><td>admin124</td><td>Login failed</td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.RuntimeException: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:21)
+	at Automationframework.iceHrm.icelogintest.start(icelogintest.java:20)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+Caused by: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at java.base/java.io.FileInputStream.open0(Native Method)
+	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:157)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:111)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:17)
+	... 22 more
+... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">Automationframework.iceHrm.icelogintest#verifyLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>admin123</td><td>2zuzfakn</td><td>Login failed</td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.RuntimeException: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:21)
+	at Automationframework.iceHrm.icelogintest.start(icelogintest.java:20)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+Caused by: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at java.base/java.io.FileInputStream.open0(Native Method)
+	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:157)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:111)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:17)
+	... 22 more
+... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">Automationframework.iceHrm.icelogintest#verifyLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>admin</td><td></td><td></td></tr><tr><th colspan="3">Exception</th></tr><tr><td colspan="3"><div class="stacktrace">java.lang.RuntimeException: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:21)
+	at Automationframework.iceHrm.icelogintest.start(icelogintest.java:20)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+Caused by: java.io.FileNotFoundException: D:\ice_crm.com\target\config.properties (The system cannot find the file specified)
+	at java.base/java.io.FileInputStream.open0(Native Method)
+	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:157)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:111)
+	at ice_hrm.com.utility.PropertyHandling.&lt;init&gt;(PropertyHandling.java:17)
+	... 22 more
+... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
