--- a/test-output/old/Suite1/methods-alphabetical.html
+++ b/test-output/old/Suite1/methods-alphabetical.html
@@ -1,40 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.addition()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">addition</td> 
-  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>51</td> <td title="&lt;&lt;NewTest.afterSuite()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@843710487</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>22</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeClass()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>-22</td> <td title="&gt;&gt;NewTest.beforesuite()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@843710487</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>-15</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforetest()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">&gt;&gt;beforetest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.division()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">division</td> 
-  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.multiplication()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">multiplication</td> 
-  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
-<tr bgcolor="8ca3c8">  <td>23/04/05 18:45:51</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.substraction()[pri:0, instance:com.ice_hrm_automation.TestingExamples.NewTest@4b741d6d]">substraction</td> 
-  <td>TestNG-tests-1@450351606</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/10 16:36:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;icelogintest.start()[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/10 16:36:18</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
+  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/10 16:36:18</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
+  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/10 16:36:18</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
+  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/10 16:36:18</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
+  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/10 16:36:18</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
+  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
+<tr bgcolor="8ca3c8">  <td>23/04/10 16:36:18</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="icelogintest.verifyLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Automationframework.iceHrm.icelogintest@75d3a5e0]">verifyLogin</td> 
+  <td>TestNG-tests-1@824575333</td>   <td></td> </tr>
 </table>
