--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-Suite1">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite1" title="Automationframework.iceHrm.icelogintest" class="method navigator-link" hash-for-method="verifyLogin(, 2zuzfakn, )">verifyLogin(, 2zuzfakn, )</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite1" title="Automationframework.iceHrm.icelogintest" class="method navigator-link" hash-for-method="verifyLogin(admin, admin124, Login failed)">verifyLogin(admin, admin124, Login failed)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite1" title="Automationframework.iceHrm.icelogintest" class="method navigator-link" hash-for-method="verifyLogin(, , )">verifyLogin(, , )</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -124,12 +114,22 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite1" title="Automationframework.iceHrm.icelogintest" class="method navigator-link" hash-for-method="verifyLogin(admin, , )">verifyLogin(admin, , )</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite1" title="Automationframework.iceHrm.icelogintest" class="method navigator-link" hash-for-method="verifyLogin(admin123, 2zuzfakn, Login failed)">verifyLogin(admin123, 2zuzfakn, Login failed)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite1" title="Automationframework.iceHrm.icelogintest" class="method navigator-link" hash-for-method="verifyLogin(admin123, 2zuzfakn, Login failed)">verifyLogin(admin123, 2zuzfakn, Login failed)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite1" title="Automationframework.iceHrm.icelogintest" class="method navigator-link" hash-for-method="verifyLogin(, , )">verifyLogin(, , )</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="Automationframework.iceHrm.icelogintest" class="method navigator-link" hash-for-method="verifyLogin(, 2zuzfakn, )">verifyLogin(, 2zuzfakn, )</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="Automationframework.iceHrm.icelogintest" class="method navigator-link" hash-for-method="verifyLogin(admin, , )">verifyLogin(admin, , )</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite1 -->
@@ -152,26 +152,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyLogin(, 2zuzfakn, )">
-                  </a> <!-- verifyLogin(, 2zuzfakn, ) -->
-                  <span class="method-name">verifyLogin</span>
-                  <span class="parameters">(, 2zuzfakn, )</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="verifyLogin(admin, admin124, Login failed)">
                   </a> <!-- verifyLogin(admin, admin124, Login failed) -->
                   <span class="method-name">verifyLogin</span>
                   <span class="parameters">(admin, admin124, Login failed)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyLogin(, , )">
-                  </a> <!-- verifyLogin(, , ) -->
-                  <span class="method-name">verifyLogin</span>
-                  <span class="parameters">(, , )</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -184,18 +168,34 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyLogin(admin, , )">
-                  </a> <!-- verifyLogin(admin, , ) -->
-                  <span class="method-name">verifyLogin</span>
-                  <span class="parameters">(admin, , )</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="verifyLogin(admin123, 2zuzfakn, Login failed)">
                   </a> <!-- verifyLogin(admin123, 2zuzfakn, Login failed) -->
                   <span class="method-name">verifyLogin</span>
                   <span class="parameters">(admin123, 2zuzfakn, Login failed)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyLogin(, , )">
+                  </a> <!-- verifyLogin(, , ) -->
+                  <span class="method-name">verifyLogin</span>
+                  <span class="parameters">(, , )</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyLogin(, 2zuzfakn, )">
+                  </a> <!-- verifyLogin(, 2zuzfakn, ) -->
+                  <span class="method-name">verifyLogin</span>
+                  <span class="parameters">(, 2zuzfakn, )</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyLogin(admin, , )">
+                  </a> <!-- verifyLogin(admin, , ) -->
+                  <span class="method-name">verifyLogin</span>
+                  <span class="parameters">(admin, , )</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -259,32 +259,32 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLogin')
 data.setCell(0, 2, 'Automationframework.iceHrm.icelogintest')
-data.setCell(0, 3, 24297);
+data.setCell(0, 3, 8318);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'verifyLogin')
 data.setCell(1, 2, 'Automationframework.iceHrm.icelogintest')
-data.setCell(1, 3, 1470);
+data.setCell(1, 3, 1853);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'verifyLogin')
 data.setCell(2, 2, 'Automationframework.iceHrm.icelogintest')
-data.setCell(2, 3, 1423);
+data.setCell(2, 3, 1760);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'verifyLogin')
 data.setCell(3, 2, 'Automationframework.iceHrm.icelogintest')
-data.setCell(3, 3, 1322);
+data.setCell(3, 3, 1634);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'verifyLogin')
 data.setCell(4, 2, 'Automationframework.iceHrm.icelogintest')
-data.setCell(4, 3, 212);
+data.setCell(4, 3, 289);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'verifyLogin')
 data.setCell(5, 2, 'Automationframework.iceHrm.icelogintest')
-data.setCell(5, 3, 164);
+data.setCell(5, 3, 232);
 window.suiteTableData['Suite1']= { tableData: data, tableDiv: 'times-div-Suite1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 38 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite1">
               </div> <!-- times-div-Suite1 -->
             </div> <!-- times-div -->
@@ -317,27 +317,27 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">verifyLogin(admin123, admin, Login failed)</span>
-                <span class="method-start">9136 ms</span>
+                <span class="method-start">56444 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLogin(admin, admin124, Login failed)</span>
-                <span class="method-start">10608 ms</span>
+                <span class="method-start">58208 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLogin(admin123, 2zuzfakn, Login failed)</span>
-                <span class="method-start">11930 ms</span>
+                <span class="method-start">59842 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLogin(, , )</span>
-                <span class="method-start">13354 ms</span>
+                <span class="method-start">61698 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLogin(, 2zuzfakn, )</span>
-                <span class="method-start">13566 ms</span>
+                <span class="method-start">61991 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLogin(admin, , )</span>
-                <span class="method-start">13731 ms</span>
+                <span class="method-start">62227 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
